--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
     "name": "electron-app",
     "version": "0.1.0",
-    "main": "src/main/main.cjs",
+    "type": "module",
+    "main": "src-main/main.mjs",
     "scripts": {
-        "dev": "electron .",
+        "dev:fe": "vite",
+        "dev:electron": "electron .",
         "build": "electron-builder build -c build-config.js --win"
     },
+    "dependencies": {
+        "vue": "^3.5.13"
+    },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.2.3",
+        "@vue/tsconfig": "^0.7.0",
         "electron": "35.2.1",
-        "electron-builder": "^26.0.12"
+        "electron-builder": "^26.0.12",
+        "typescript": "~5.8.3",
+        "vite": "^6.3.5",
+        "vue-tsc": "^2.2.8"
     }
 }
